--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Uppity Ape
 description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://cloud.githubusercontent.com/assets/1256252/9023224/8f6a46a4-3860-11e5-9cdb-60d9a9783658.png
+avatar: https://avatars2.githubusercontent.com/u/1256252?v=3&s=460
 
 #
 # Flags below are optional
