--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Uppity Ape
 
 # Short bio or description (displayed in the header)
-description:
+description: ...observing silly humans.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/1256252?v=3&s=460
